--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ rvm:
   - 2.4.4
   - 2.5.1
 before_install: gem install bundler -v 1.16.2
+script:
+  - bundle exec rake spec
+  - bundle exec rake build
