disable FrozenStringLiteral cop and improve rdoc

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,11 +1,14 @@
 AllCops:
   TargetRubyVersion: 2.3
 
-"Style/StringLiterals":
+Style/StringLiterals:
   Exclude:
     - "**/*_spec.rb"
 
 # This cop is annoying. We might want to make this work on an old Ruby sometime,
 # so STFU.
-"Style/SafeNavigation":
+Style/SafeNavigation:
+  Enabled: false
+
+Style/FrozenStringLiteralComment:
   Enabled: false
