--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,3 +14,7 @@ Style/SafeNavigation:
 # Don't care about frozen string literals because we don't have any string literals.
 Style/FrozenStringLiteralComment:
   Enabled: false
+
+Metrics/BlockLength:
+  Exclude:
+    - "**/*_spec.rb"
