don't care about empty lines in specs

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,3 +18,7 @@ Style/FrozenStringLiteralComment:
 Metrics/BlockLength:
   Exclude:
     - "**/*_spec.rb"
+
+Layout/EmptyLines:
+  Exclude:
+    - "**/*_spec.rb"
