--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,4 @@
+---
 AllCops:
   TargetRubyVersion: 2.4
 
@@ -13,6 +14,9 @@ Style/SafeNavigation:
 Metrics/BlockLength:
   Exclude:
     - "**/*_spec.rb"
+
+Layout/EmptyLineAfterMagicComment:
+  Enabled: false
 
 Layout/EmptyLines:
   Exclude:
