--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: ruby
 rvm:
   - 2.4.5
   - 2.5.3
-before_install: gem install bundler -v 1.16.6
+before_install: gem install bundler -v 1.17.1
+bundler_args:
 script:
   - bundle exec rake spec
   - bundle exec rake build
